Fixed prev/next when reaching end of list (wrap around list)

--- a/www/assets/less/main.less
+++ b/www/assets/less/main.less
@@ -102,11 +102,11 @@ body {
   border: 1px dashed @song-border;
 }
 
-#ytplayer {
-  width: 100%;
-  height: 370px;
+#player {
+  margin-top: 10px
 }
 
 #search-container {
   text-align: center;
+  margin-bottom: 20px;
 }
